# code-review-bot

./: .env.example  Dockerfile  README.md  diff.patch  main.py  pyproject.toml
.github/actions/review/: action.yml
.github/workflows/: build-push.yml  self-review.yml
src/agent/: review.py
src/agent/prompts/: __init__.py  system.md
src/config/: settings.py
src/data/schemas/: graph.py
src/github/: client.py
src/services/: llm_provider.py
src/system/: logs.py
src/utils/: diff_parser.py
